<resources>
    <string name="app_name">Search Movie UI/UX</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search_movie">Search Movie</string>
    <string name="detail_movie">Detail Movie</string>

    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="tagline">Tagline</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="budget">Budget</string>
    <string name="overview">Overview</string>
    <string name="change_language_settings">Change Language</string>

    <string name="failed">Failed</string>
    <string name="title_empty">Title Empty</string>
    <string name="searching">Searching</string>

</resources>
